fix URI use